--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,7 @@ hr {
 .block2-group1 {
   max-width: 989px;
   width: 100%;
-  height: 405px;
+  height: 511px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -395,6 +395,7 @@ hr {
   height: 50px;
   position: absolute;
   top: 120px;
+  right: -112px;
 }
 
 .headphone .d2 {
@@ -1003,7 +1004,7 @@ hr {
   .block2-group1 {
     max-width: 989px;
     width: 100%;
-    height: 405px;
+    height: 517px;
     align-items: center;
     text-align: center;
     display: flex;
@@ -1834,7 +1835,7 @@ hr {
     height: 56px;
     border: none;
     background: linear-gradient(90deg, #4a4745 0%, #151414 100%);
-    left: 49px;
+    left: 39px;
     top: 315px;
     position: absolute;
   }
@@ -1924,7 +1925,7 @@ hr {
     width: 158px;
     height: 56px;
     border: none;
-    left: 28px;
+    left: 6px;
     top: 315px;
     position: absolute;
   }
