--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,7 @@ body{
   width: 100%;
   display: flex;
   justify-content: center;
-  background: #0b0a09;
- 
+  background: #0b0a09; 
 }
  
 #landing-section {
@@ -203,7 +202,6 @@ hr {
 .block2-container {
   max-width: 1440px;
   width: 100%;
-  height: 478px;
   display: flex;
   justify-content: center;
 }
@@ -283,7 +281,6 @@ hr {
 .items {
   width: 100%;
   max-width: 1440px;
-  height: 676px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -351,6 +348,8 @@ hr {
 /* section4 */
 .section4 {
   width: 100%;
+  display: flex;
+  justify-content: center;
   background-color: #0b0a09;
   color: white;
 }
@@ -362,7 +361,7 @@ hr {
 
 .headphone .image {
   width: 100%;
-  height: 487.08px;
+  height: 487px;
   margin-top: 40px;
 }
 
@@ -494,14 +493,13 @@ hr {
 .spec-sec {
   width: 100%;
   max-width: 1440px;
-  height: 743px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 64px 20px;
 }
 
 .spec-head {
@@ -551,19 +549,17 @@ hr {
   display: flex;
   justify-content: center;
   background-color: #0b0a09;
-  padding: 20px 0;
 }
 
 .sponser-main {
   width: 100%;
   max-width: 1440px;
-  height: 211px;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 88px 20px;
 }
 
 .sponser {
@@ -592,14 +588,13 @@ hr {
 .footer-div {
   width: 100%;
   max-width: 1440px;
-  height: 443px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 64px 20px;
 }
 
 .foot-row {
